# Serenity

./: Cargo.toml  README.md
src/: envelope.rs  lib.rs  oscillator.rs  voice.rs
