[package]
name = "serenity"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui_knob = "0.2"
nih-plug = { git = "https://github.com/robbert-vdh/nih-plug.git", package = "nih_plug" }
nih-plug-egui = { git = "https://github.com/robbert-vdh/nih-plug.git", package = "nih_plug_egui" }
